adding portfolio pictures

--- a/_posts/2015-12-12-NMC.markdown
+++ b/_posts/2015-12-12-NMC.markdown
@@ -2,7 +2,7 @@
 layout: default
 modal-id: 3
 date: 2016-09-13
-img: game.png
+img: NMC.png
 alt: image-alt
 project-date: Dec 2015
 client: Iowa State University
