--- a/_posts/2015-12-12-NMC.markdown
+++ b/_posts/2015-12-12-NMC.markdown
@@ -7,6 +7,6 @@ alt: image-alt
 project-date: Dec 2015
 client: Iowa State University
 category: Class Game Project
-description: NMC is a game created for Com Sci 309. https://www.youtube.com/watch?v=JovayafWCA0
+description: NMC is a game created for Com Sci 309. <a href="https://www.youtube.com/watch?v=JovayafWCA0">Video Demo</a>
 
 ---
